--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:id="@+id/root"
-    android:background="#000000">
+    android:background="#000000"
+    tools:context=".MainActivity">
+
+
+    <ru.yandexschool.emptyjava.BottomBallView
+        android:paddingTop="100dp"
+        android:paddingBottom="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
